# prime

./: Cargo.toml  README.md
src/: calc.rs  config.rs  main.rs
