[package]
name = "prime"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
indicatif = { version = "0.17.8", features = ["rayon"] }
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
num = "0.4.1"
num-bigint = "0.4.4"
num-iter = "0.1.44"
num-rational = "0.4.2"
once_cell = "1.19.0"
rayon = "1.10.0"
scope-functions = "1.1.0"
